@@ -8,14 +8,17 @@ namespace GameOfLife
         {
             Console.WriteLine("Hello World!");
 
-            //load it
-            gamelife ca = new gamelife(35, 35);
-
             //get user input
+            Console.WriteLine("Wrap so borders are looped? (y/n)");
+            Console.WriteLine();
+            string res = Console.ReadLine();
+            bool wraped = true;
+            if (res == "n")
+                wraped = false;
             int noSteps = 0;
             Console.WriteLine("Give number of steps to simulate:");
             Console.WriteLine();
-            string res = Console.ReadLine();
+            res = Console.ReadLine();
             noSteps = Convert.ToInt32(res);
             Console.WriteLine("Print changes? (y/n)");
             Console.WriteLine();
@@ -25,6 +28,8 @@ namespace GameOfLife
                 printChanges = true;
             Console.WriteLine();
 
+            //load it
+            gamelife ca = new gamelife(35, 35, wraped);
 
             //simulate
             //ca.SkipSimulate(noSteps, printChanges);
